<resources>
    <string name="app_name" translatable="false">Maipets</string>
    <string name="welcome">WELCOME</string>
    <string name="welcome1">We will help you configure the application ...</string>
    <string name="newuser">I\'m  a new user</string>
    <string name="alreadyuser">Actually I have an account</string>
    <string name="familyuser">Family with pets</string>
    <string name="vetuser">Veterinary clinic</string>
    <string name="anotheruser">Other services for pets</string>
    <string name="regtext">Please, fill all the fields</string>
    <string name="name">Name</string>
    <string name="surname">Surnames</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="repassword">Password again</string>
    <string name="register">REGISTER</string>
    <string name="cancel">CANCEL</string>
    <string name="slogan">Managing your pets in a few clicks</string>
    <string name="login">LOGIN</string>
    <string name="razsoc">Business name</string>
    <string name="dir">Direction</string>
    <string name="telef">Telephone</string>
    <string name="pelu">Haircut\'s pet</string>
    <string name="alim">Feeding</string>
    <string name="guarde">Pet nursery</string>
    <string name="protec">Animal shelter</string>
    <string name="serv">Services</string>
    <string name="chooseServ">"Choose Service Type: "</string>
    <string name="e_empty">Please fill al the fields</string>
    <string name="e_pass">Error. Passwords is not equals</string>
    <string name="ok_register">Registered!</string>
    <string name="e_register">Register error!</string>
    <string name="perfil">Profile</string>
    <string name="masc">Pets</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="log_nok">Login error</string>
    <string name="log_ok">Correct Login</string>
    <string name="label_logout">Logout</string>
    <string name="edit_masc">Update values</string>
    <string name="del_masc">Delete</string>
    <string name="info">About Maipets</string>
    <string name="share">Share...</string>
    <string name="uc">Developing...</string>
    <string name="addM">ADD PET</string>
    <string name="no_add">Pet not added</string>
    <string name="editMasc">View full record</string>
    <string name="editType">Specie</string>
    <string name="editRace">Race</string>
    <string name="editColor" translatable="false">Color</string>
    <string name="editDate">Birth Date</string>
    <string name="ed_prof">Save Profile</string>
    <string name="del_prof">Delete profile</string>
    <string name="save_ok">Saved!</string>
    <string name="desc">Enter your description here...</string>
    <string name="imgSave">The photo is save in device, please check this path:</string>
    <string name="imgNoSave">Sorry your photo don\'t write in device</string>
    <string name="select">Choose image from:</string>
    <string name="goOut">For close the PopUp, simply touch outside</string>
    <string name="cam">Camera</string>
    <string name="gal">Gallery</string>
    <string name="change">Edit values to update</string>
    <string name="user">User:</string>
    <string name="delImg">Delete Photo</string>
    <string name="add">ADD</string>
    <string name="addMasc">Enter your pet\'s information</string>
    <string name="ficDel">Token removed</string>
    <string name="ficEd">Token updated</string>
    <string name="cardPet">Identification Card</string>
    <string name="nosave">Save error</string>
    <string name="addS">ADD SERVICE</string>
    <string name="disServ">Available services</string>
    <string name="s_noadd">Service not added</string>
    <string name="addServ">Enter your Service Information</string>
    <string name="nameS">Service name</string>
    <string name="descS">Service description</string>
    <string name="descr">Description</string>
    <string name="passloose">Forgotten password?</string>
    <string name="resp">Restore password</string>
    <string name="instreset">Enter the email with which you are registered in Maipets and you will receive an email with a link to reset your password.</string>
    <string name="needEmail">You must enter an email</string>
    <string name="mailsend">Email successfully sent</string>
    <string name="saving">Save</string>
    <string name="cDel">Confim delete</string>
    <string name="yesDel">Are you sure to delete your profile? You will lose all your saved data</string>
    <string name="afirmative">Yes</string>
    <string name="delPet">Are you sure to delete this pet data?</string>
    <string name="dispServ">Available Services</string>
    <string name="citaServ">Manage appointments</string>
    <string name="dataServ">See more data</string>
    <string name="cabDate">New date</string>
    <string name="chooseOpt">Choose available option</string>
    <string name="choBus">↞  Choose a business   ↠</string>
    <string name="citasSac">Scheduled dates for</string>
    <string name="citaPara">Dates for</string>
    <string name="citaDonde">Business:</string>
    <string name="date">Date</string>
    <string name="hour">Hour</string>
    <string name="dateFor">Concert a date for</string>
    <string name="solic">Apply for</string>
    <string name="locat">Location:</string>
    <string name="selecAct">Select a modality</string>
    <string name="sel">Selected:</string>
    <string name="sacarCita">Make an appointment</string>
    <string name="formato_fecha">mm/dd/yyyy</string>
    <string name="formato_hora" translatable="false">hh:mm</string>
    <string name="delCita">Are you sure to delete this date?</string>
    <string name="descCliVet">Specialty of the veterinary practice that deals with diseases and their prevention, management, behavior, nutrition, genetic selection, preventive and curative medicine, identification and expertise of dogs, cats and other pets</string>
    <string name="descGuarde">A pet sitting is a place where you can leave your pet on a regular basis - for example, every morning, while you are at work -, just a few hours at specific times, or several days; the time you need. The fundamental difference from a residence is that there are no cages in pet kindergartens</string>
    <string name="descAlim">They are stores that sell a type feeding for specific animals (birds, dogs, fish, exotic animals, etc.) and their accessories.</string>
    <string name="descProtec">They are non-profit entities whose main purpose is to help as much as possible the world of animals and respect for the environment. And more generally, they tend to focus on the world of Companion Animals, this does not mean that they leave aside the rest of the animals that live in our society.</string>
    <string name="descPelu">Pet hairdressers are professional centers specialized in hygiene and aesthetics that aim to preserve the health of our pets.</string>
    <string name="pChoBus">Please, clic one business</string>
    <string name="sFecha">Please, select a date</string>
    <string name="sHora">Please, select a hour</string>
    <string name="notiTitle">Appointment saved</string>
    <string name="notiDesc1">The appointment for</string>
    <string name="notiDesc2">" has been sent to calendar"</string>
    <string name="admin">Customer Management</string>
    <string name="introSge">" Application management system"</string>
    <string name="sgedb">Basic data</string>
    <string name="sgespr">Related services</string>
    <string name="sgecom">Communication</string>
    <string name="sgeedr">Other data</string>
    <string name="ususReg">Registered users</string>
    <string name="usuFill">User data</string>
    <string name="tipu">User type:</string>
    <string name="tipuR">Family User</string>
    <string name="mail2p">Email:</string>
    <string name="telef2p">Telephone:</string>
    <string name="noData">Without data</string>
    <string name="activity">Activity:</string>
    <string name="related">Related products and services</string>
    <string name="relatedAct">User with registered activities</string>
    <string name="yesAdminDel">Are you sure to delete this user? The user will lose all your saved data</string>
    <string name="datMan">Dates management</string>
    <string name="usersList">Users\'s list</string>
    <string name="usuCom">Ways of communication</string>
    <string name="subject">Subject</string>
    <string name="emailmsg">Email message goes here</string>
    <string name="err" translatable="false">Error</string>
    <string name="citPara">Date for</string>
    <string name="log_exist">User already logged. Entering...</string>


</resources>
