<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/masc"
    android:id="@+id/navigation">


    <fragment
        android:id="@+id/perfil"
        android:name="com.example.maipetsfct.fragments.ProfileFragment"
        android:label="@string/perfil"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/masc"
        android:name="com.example.maipetsfct.fragments.PetsFragment"
        android:label="@string/masc"
        tools:layout="@layout/fragment_pets" />
    <fragment
        android:id="@+id/serv"
        android:name="com.example.maipetsfct.fragments.ServicesFragment"
        android:label="@string/serv"
        tools:layout="@layout/fragment_services" />


</navigation>