<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.maipetsfct.UsersActivity">

    <item
        android:id="@+id/empty"
        android:icon="@drawable/menu"
        android:orderInCategory="101"
        app:showAsAction="always"
        android:title="">

        <menu>

            <item
                android:id="@+id/info"
                android:icon="@drawable/info"
                android:orderInCategory="100"
                android:title="@string/info"
                app:showAsAction="always|withText"/>

            <item
                android:id="@+id/goAdmin"
                android:title="@string/admin"
                android:orderInCategory="100"
                android:icon="@drawable/admin"
                app:showAsAction="always|withText"/>

            <item
                android:id="@+id/mnuLogout"
                android:icon="@drawable/exit"
                android:orderInCategory="100"
                android:title="@string/label_logout"
                app:showAsAction="always|withText"/>

        </menu>
    </item>
</menu>